make the librory once, and tested ok in linx

--- a/setup/subCmake_bin/CMakeLists.txt
+++ b/setup/subCmake_bin/CMakeLists.txt
@@ -11,22 +11,26 @@ file(GLOB_RECURSE lib_file ${PROJECT_SOURCE_DIR}/lib/*.a)
 # 添加头文件路径
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
+# set link options
+SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Xlinker")
+message ("link options: " ${CMAKE_EXE_LINKER_FLAGS})
+
 # 添加第三方库(add)头文件路径
 link_directories(${PROJECT_SOURCE_DIR}/lib)
 
 #生成可执行文件
 ADD_EXECUTABLE(${CURRENT_FOLDER}_exe ${main_file})
 
-# TARGET_LINK_LIBRARIES(${CURRENT_FOLDER}_exe ${lib_file})
+TARGET_LINK_LIBRARIES(${CURRENT_FOLDER}_exe ${lib_file})
 
 # 添加链接库
-execute_process(
-	COMMAND ls ${PROJECT_SOURCE_DIR}/lib
-	OUTPUT_VARIABLE libs
-	)
-string(REPLACE "\n" ";" libList ${libs})
-foreach(item ${libList})
-	message("add lib: ${item}")
-	TARGET_LINK_LIBRARIES(${CURRENT_FOLDER}_exe ${PROJECT_SOURCE_DIR}/lib/${item})
-endforeach()
+#execute_process(
+	#COMMAND ls ${PROJECT_SOURCE_DIR}/lib
+	#OUTPUT_VARIABLE libs
+	#	)
+#string(REPLACE "\n" ";" libList ${libs})
+#foreach(item ${libList})
+	#message("add lib: ${item}")
+	#TARGET_LINK_LIBRARIES(${CURRENT_FOLDER}_exe ${PROJECT_SOURCE_DIR}/lib/${item})
+	#endforeach()
 
