--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,6 +16,7 @@ RUN sudo apt install -y openssh-server
 RUN sudo apt install -y net-tools
 RUN sudo apt install -y build-essential gdb
 RUN sudo apt install -y cmake
+RUN cp /etc/skel/.bashrc ~/ # enable the colors for root
 #----------------------->END system tools
 
 
