--- a/setup/cmake/package/top/CMakeLists.txt
+++ b/setup/cmake/package/top/CMakeLists.txt
@@ -19,17 +19,17 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #设置执行文件输出目录
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
-# 添加子目录---kernal
+# 添加子目录---package
 execute_process(
-	COMMAND ls ${PROJECT_SOURCE_DIR}/${SRC_DIR}/kernal
-	OUTPUT_VARIABLE subDirs_kernal
+	COMMAND ls ${PROJECT_SOURCE_DIR}/${SRC_DIR}/package
+	OUTPUT_VARIABLE subDirs_package
 	)
-string(REPLACE "\n" ";" subDirsList_kernal ${subDirs_kernal})
+string(REPLACE "\n" ";" subDirsList_package ${subDirs_package})
 
-#编译下一级所有子模块----kernal
-foreach(item ${subDirsList_kernal})
+#编译下一级所有子模块----package
+foreach(item ${subDirsList_package})
 	message("add sub directory: ${SRC_DIR}/${item}")
-	add_subdirectory(${SRC_DIR}/kernal/${item})
+	add_subdirectory(${SRC_DIR}/package/${item})
 endforeach()
 
 
