add CmakeList and new file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,7 @@
 #设置 BINARY 为项目名IndexProject
 set(BINARY ${CMAKE_PROJECT_NAME})
  
-# 1
-# add_executable(ExampleProject main.cpp file1.cpp file1.h)
- 
-# 2
-file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.c *.cpp)
+file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.c)
 set(SOURCES ${SOURCES})
 
-add_library(${BINARY}_mimilib STATIC ${SOURCES})
+add_library(${BINARY}-core STATIC ${SOURCES})
